Fix layout on small screens

--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -1,11 +1,16 @@
-.signup-page, .signin-page {
+.form-container {
     max-width: 500px;
     margin-top: 120px;
 }
 
+.flash {
+    top: 5rem;
+    right: 3.75rem;
+}
+
 @media (max-width: 767px) {
-    .signup-page, .signin-page {
-        margin-top: 40px;
+    .form-container {
+        margin-top: 75px;
     }
 
     .home-page {
@@ -20,5 +25,10 @@
     .home-page > ul {
         width: 100% !important;
         padding: 0 20px;
+    }
+
+    .flash {
+        top: 4rem;
+        right: .5rem;
     }
 }
